Fix consignment navigation list refresh